--- a/formulaires/formulaire_menu_lang.html
+++ b/formulaires/formulaire_menu_lang.html
@@ -1,6 +1,7 @@
 <form	action='[(#ENV{url})]'
 	method='post'
-	style='margin:0px; padding:0px;'>[
+	style='margin:0px; padding:0px;'>
+  <div>[
 	<input type='hidden' name='url' value='(#ENV{cible})' />
 ]	<select	name='[(#ENV{nom})]' 
 		class='forml'
@@ -9,6 +10,7 @@
 		[(#ENV*{langues})]
       </select>
       <noscript>
-	<input type='submit' value='&gt;&gt;' class='spip_bouton' />
+	    <input type='submit' value='&gt;&gt;' class='spip_bouton' />
       </noscript>
+  </div>
 </form>
