accessibilité complete de la page de login

--- a/formulaires/formulaire_menu_lang.html
+++ b/formulaires/formulaire_menu_lang.html
@@ -9,8 +9,8 @@
 		onchange="document.location.href='[(#ENV{retour})]&amp;[(#ENV{nom})]='+this.options[this.selectedIndex].value">
 		[(#ENV*{langues})]
       </select>
-      <noscript>
+      <noscript><ins>
 	    <input type='submit' value='&gt;&gt;' class='spip_bouton' />
-      </noscript>
+      </ins></noscript>
   </div>
 </form>
