--- a/formulaires/formulaire_login.html
+++ b/formulaires/formulaire_login.html
@@ -1,6 +1,6 @@
 [(#ENV{echec_cookie})
 	<h3 class="spip"><:erreur_probleme_cookie:></h3>
-		<b><:login_cookie_oblige:></b>
+		<strong><:login_cookie_oblige:></strong>
 		  <:login_cookie_accepte:><p />
 ]
 
@@ -17,7 +17,7 @@
 		<div class="spip_encadrer" style="[(#URL_SITE_SPIP|style_align)]">[
 			<div class="reponse_formulaire">(#ENV*{erreur})<br /><br /></div>
 ][
-			<label><b><:login_login2:></b><br />(#ENV{login}|?{'',' '})
+			<label for='var_login'><strong><:login_login2:></strong><br />(#ENV{login}|?{'',' '})
 			<input type="text" id='var_login' name="var_login" class="forml" value="" size="40" />
 			</label>
 ][
@@ -27,21 +27,21 @@
 	alt="[(#ENV{login_alt})]" /></div>]
 	<input type="hidden" name="session_login_hidden" value="(#ENV{login})" />
 <script type="text/javascript"><!--
-document.write("<:login_login:>&nbsp;<b>[(#ENV{login_alt})]<" + "/b><br />&#91;<a style='color: #e86519' href='spip_cookie.php3?cookie_admin=non[&amp;url=(#ENV{url})][&amp;retour=(#SELF|urlencode)]'><font size='2'><:login_autre_identifiant:><" + "/font><" + "/a>&#93;")
+document.write("<:login_login:>&nbsp;<strong>[(#ENV{login_alt})]<" + "/strong><br />&#91;<a style='color: #e86519' href='spip_cookie.php3?cookie_admin=non[&amp;url=(#ENV{url})][&amp;retour=(#SELF|urlencode)]'><font size='2'><:login_autre_identifiant:><" + "/font><" + "/a>&#93;")
 //--></script>
 <noscript>
 	<p class='notes' style='font-size: 130%'>
 		<:login_non_securise:>
 		<a href="[(#ENV{action})]"><:login_recharger:></a>.
 	</p>
-	<label><b><:login_login2:></b><br />
+	<label><strong><:login_login2:></strong><br />
 	<input type='text' name='session_login' class='forml' [value="(#ENV{login})" ]size='40' />
 	</label>
 </noscript>
 
 </div>
 <p>
-		<label><b><:login_pass2:></b>&nbsp;
+		<label><strong><:login_pass2:></strong>&nbsp;
 		<input type="password" name="session_password"[ id="var_login_(#ENV{login})]" class="forml" style="width: 140px;" value="" size="20" />
 		</label>	
 		<br />&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox"
