petites scories (Aurélien)

--- a/formulaires/formulaire_login.html
+++ b/formulaires/formulaire_login.html
@@ -42,7 +42,7 @@ document.write("<:login_login:>&nbsp;<strong>[(#ENV{login_alt})]<" + "/strong><b
 </div>
 <p>
 		<label><strong><:login_pass2:></strong>&nbsp;
-		<input type="password" name="session_password"[ id="var_login_(#ENV{login})]" class="forml" style="width: 140px;" value="" size="20" />
+		<input type="password" name="session_password"[ id="var_login_(#ENV{login})"] class="forml" style="width: 140px;" value="" size="20" />
 		</label>	
 		<br />&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox"
 			 name="session_remember"
