--- a/formulaires/formulaire_signature.html
+++ b/formulaires/formulaire_signature.html
@@ -1,5 +1,5 @@
 <form method='post' action='#SELF#sp[(#ENV{id_article})]'>
-<input type="hidden" name="url_page" value="#URL_SITE_SPIP/#SELF">
+<input type="hidden" name="url_page" value="#URL_SITE_SPIP/#SELF" />
 <div class='spip_encadrer' style='color: black; font-size: 80%; font-weight: normal;'>
 [(#ENV*{texte}|propre)]
 <fieldset style='font-size: 110%; font-weight: bold;'>
