--- a/formulaires/formulaire_site.html
+++ b/formulaires/formulaire_site.html
@@ -4,15 +4,15 @@
 	<legend></legend>
 	<label>
 	  <:form_prop_nom_site:>
-	  <input type="text" class="forml" name="nom_site" value="" size="30">
+	  <input type="text" class="forml" name="nom_site" value="" size="30" />
 	</label>
 	<label>
 	  <:form_prop_url_site:>
-	  <input type="text" class="forml" name="url_site" value="" size="30">
+	  <input type="text" class="forml" name="url_site" value="" size="30" />
 	</label>
 	<label><:form_prop_description:>
 	  <textarea name='description_site' rows='5' class='forml' cols='40'></textarea>
 	</label>
-	<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>"></div>
+	<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div>
       </fieldset>
 </form>
