--- a/formulaires/formulaire_oubli.html
+++ b/formulaires/formulaire_oubli.html
@@ -15,7 +15,7 @@
 	  <:pass_indiquez_cidessous:>
 	  <input type="texte" name="oubli" />
 	</label>]
-	<input type=submit class="fondl" value="<:pass_ok:>" />
+	<input type="submit" class="fondl" value="<:pass_ok:>" />
       </fieldset>
 </form>
 ]
