chaîne miraculée suite

--- a/formulaires/formulaire_login.html
+++ b/formulaires/formulaire_login.html
@@ -1,5 +1,5 @@
 [(#ENV{echec_cookie})
-	<h3 class="spip"><:erreur_probleme_cookie:></h3>
+	<h3 class="spip"><:avis_probleme_cookie:></h3>
 		<strong><:login_cookie_oblige:></strong>
 		  <:login_cookie_accepte:><p />
 ]
