intégration de generer_url_site() partout, possibilité de faire un "preview" sur les sites, etc. A noter que pour afficher l'adresse de la page qui présnete le site x, on ne peut pas utiliser #URL_SITE ni #URLSYNDIC, car ce sont respectivement l'adresse réelle du site et celle de son backend. Il faut utiliser [(#ID_SYNDIC|generer_url_site)]

--- a/formulaires/formulaire_admin.html
+++ b/formulaires/formulaire_admin.html
@@ -4,7 +4,9 @@
 	<li><a href='ecrire/articles.php3?id_article=(#ENV{id_article})' class='spip-admin-boutons'><:admin_modifier_article:> ([(#ENV{id_article})])</a></li>][
 	<li><a href='ecrire/breves_voir.php3?id_breve=(#ENV{id_breve})' class='spip-admin-boutons'><:admin_modifier_breve:> ([(#ENV{id_breve})])</a></li>][
 	<li><a href='ecrire/naviguer.php3?id_rubrique=(#ENV{id_rubrique})' class='spip-admin-boutons'><:admin_modifier_rubrique:> ([(#ENV{id_rubrique})])</a></li>][
-	<li><a href='ecrire/mots_edit.php3?id_mot=(#ENV{id_mot})' class='spip-admin-boutons'><:admin_modifier_mot:> ([(#ENV{id_mot})])</a></li>][
+	<li><a href='ecrire/mots_edit.php3?id_mot=(#ENV{id_mot})' class='spip-admin-boutons'><:admin_modifier_mot:>
+([(#ENV{id_mot})])</a></li>][
+	<li><a href='ecrire/sites.php3?id_syndic=(#ENV{id_syndic})' class='spip-admin-boutons'><:icone_modifier_site:> ([(#ENV{id_syndic})])</a></li>][
 	<li><a href='ecrire/auteurs_edit.php3?id_auteur=(#ENV{id_auteur})' class='spip-admin-boutons'><:admin_modifier_auteur:> ([(#ENV{id_auteur})])</a></li>][
 	<li><a href='(#ENV{ecrire})/' class='spip-admin-boutons'><:espace_prive:></a></li>]
 	<li><a href='[(#ENV{action})]var_mode=recalcul' class='spip-admin-boutons'><:admin_recalculer:>[(#ENV{use_cache})]</a></li>[
