--- a/formulaires/formulaire_menu_lang.html
+++ b/formulaires/formulaire_menu_lang.html
@@ -1,16 +1,16 @@
 <form	action='[(#ENV{url})]'
 	method='post'
 	style='margin:0px; padding:0px;'>
-  <div>[
+<div>[
 	<input type='hidden' name='url' value='(#ENV{cible})' />
 ]	<select	name='[(#ENV{nom})]' 
 		class='forml'
 		style='vertical-align: top; max-height: 24px; margin-bottom: 5px; width: 120px;'
 		onchange="document.location.href='[(#ENV{retour})]&amp;[(#ENV{nom})]='+this.options[this.selectedIndex].value">
 		[(#ENV*{langues})]
-      </select>
-      <noscript><ins>
-	    <input type='submit' value='&gt;&gt;' class='spip_bouton' />
-      </ins></noscript>
-  </div>
+	</select>
+	<noscript>
+		<input type='submit' value='&gt;&gt;' class='spip_bouton' />
+	</noscript>
+</div>
 </form>
