Formulaires aux formats XHTML1.0

--- a/formulaires/formulaire_inscription.html
+++ b/formulaires/formulaire_inscription.html
@@ -10,7 +10,8 @@
 ]<:form_forum_indiquer_nom_email:>
  <form	id="inscription" method='post' action='#SELF'
 	style='border: 0px; margin: 0px;'> 
-      <fieldset style="border: none; font-weight: bold"><legend></legend>
+      <fieldset style="border: none; font-weight: bold">
+	<legend><:form_forum_identifiants:></legend>
 	<label>
 	  <:form_pet_votre_nom:>
 	  <input type="text" class="forml" name="nom_inscription" value="" size="30" />
