--- a/formulaires/formulaire_oubli.html
+++ b/formulaires/formulaire_oubli.html
@@ -3,8 +3,8 @@
 ][
 (#ENV*{message}|?{'',' '})
 <form id="oubli_form" action='spip_pass.php3' method='post'>
-	<fieldset style="border: none;"><legend></legend>[
-	<:pass_nouveau_pass:>
+	<fieldset style="border: none;">
+	<legend><:pass_nouveau_pass:></legend>[
 	<input type='hidden' name="p" value="(#ENV{p})" />
 	<label>
 	    <:pass_choix_pass:>
