--- a/formulaires/formulaire_site.html
+++ b/formulaires/formulaire_site.html
@@ -1,7 +1,7 @@
 <form action="#SELF" method="post">
       <br />
       <fieldset	class='spip_encadrer' style='color: black; font-size: 90%'>
-	<legend></legend>
+	<legend><:info_site:></legend>
 	<label>
 	  <:form_prop_nom_site:>
 	  <input type="text" class="forml" name="nom_site" value="" size="30" />
