bouton "Analyse XML"

--- a/formulaires/formulaire_admin.html
+++ b/formulaires/formulaire_admin.html
@@ -1,5 +1,5 @@
 <div [class="(#ENV{divclass})" ]dir='#LANG_DIR'>[
-	<a href='(#ENV{analyser})' class='spip-admin-boutons'><:analyser:>[(#ENV{xhtml_error}?{' *',''})]</a>][
+	<a href='(#ENV{analyser})' class='spip-admin-boutons'><:analyse_xml:>[(#ENV{xhtml_error}?{' *',''})]</a>][
 	<a href='ecrire/articles.php3?id_article=(#ENV{id_article})' class='spip-admin-boutons'><:admin_modifier_article:> ([(#ENV{id_article})])</a>][
 	<a href='ecrire/breves_voir.php3?id_breve=(#ENV{id_breve})' class='spip-admin-boutons'><:admin_modifier_breve:> ([(#ENV{id_breve})])</a>][
 	<a href='ecrire/naviguer.php3?id_rubrique=(#ENV{id_rubrique})' class='spip-admin-boutons'><:admin_modifier_rubrique:> ([(#ENV{id_rubrique})])</a>][
