bug affichage du l'url lors de la prévisu de forum (Yves Grenier)

--- a/formulaires/formulaire_forum_previsu.html
+++ b/formulaires/formulaire_forum_previsu.html
@@ -8,7 +8,7 @@
 
 [<p />(#ENV*{texte})]
 
-[<p /><a [href="(#ENV{url_site}|urlencode)"]>(#ENV*{nom_site_forum})</a>]
+[<p /><a [href="(#ENV{url_site}|attribut_html)"]>(#ENV*{nom_site_forum})</a>]
 
 [(#ENV*{mots_forum})]
 
