--- a/formulaires/formulaire_site.html
+++ b/formulaires/formulaire_site.html
@@ -1,4 +1,4 @@
-<form action="#SELF" method="post">
+<form action="[(#ENV{self})]" method="post">
       <br />
       <fieldset	class='spip_encadrer' style='color: black; font-size: 90%'>
 	<legend><:info_site:></legend>
