--- a/formulaires/formulaire_inscription.html
+++ b/formulaires/formulaire_inscription.html
@@ -8,7 +8,7 @@
  (#ENV{mode}|=={redac}|?{' ',''})
 	<:pass_espace_prive_bla:><br /><br />
 ]<:form_forum_indiquer_nom_email:>
- <form	id="inscription" method='post' action='#SELF'
+ <form	id="inscription" method='post' action="[(#ENV{self})]"
 	style='border: 0px; margin: 0px;'> 
       <fieldset style="border: none; font-weight: bold">
 	<legend><:form_forum_identifiants:></legend>
