--- a/formulaires/formulaire_ecrire_auteur.html
+++ b/formulaires/formulaire_ecrire_auteur.html
@@ -1,7 +1,24 @@
 [<br />(#ENV*{sujetko})<:form_prop_indiquer_sujet:><br />&nbsp;][
 <br />(#ENV*{mailko})<:form_prop_indiquer_email:><br /><br />
-]<form action="[(#ENV{action})]" method='post'>[
-<input type="hidden" name="id_formulaire_ecrire_auteur" value="(#ENV{valide})" />]
+]
+
+<form action="#SELF" method='post'>
+
+[(#REM) Previsualisation ... ]
+[<input type="hidden" name="num_formulaire_ecrire_auteur" value="(#ENV{valide})" />]
+[<div class='spip_encadrer'>
+<i>[(#ENV{mail})]</i> - <strong>[(#ENV{sujet})]</strong>
+<div>
+[(#ENV{texte}|nl2br)]
+</div>
+<div style="text-align:#LANG_RIGHT;">
+	<input type="submit"  class="spip_bouton" name="confirmer[(#ENV{id})]"
+		 value="(#ENV{boutonconfirmation})" />
+</div>
+</div>
+]
+
+[(#REM) Formulaire normal   ]
 <p><label><:form_pet_votre_email:>
 <input type="text" class="forml" name="email_message_auteur[(#ENV{id})]"
 	value="[(#ENV{mail})]" size="30" />
@@ -13,8 +30,9 @@
 <p>
 <textarea name="texte_message_auteur[(#ENV{id})]" rows='10' class='forml' cols='40'>[(#ENV{texte})]</textarea>
 </p>
-<div align="right">
+<div style="text-align:#LANG_RIGHT;">
 	<input type="submit"  class="spip_bouton" name="valide"
 		 value="[(#ENV{bouton})]" />
 </div>
+
 </form>
