unifier la presentation des deux lignes du formulaire

--- a/formulaires/formulaire_ecrire_auteur.html
+++ b/formulaires/formulaire_ecrire_auteur.html
@@ -19,7 +19,7 @@
 ]
 
 [(#REM) Formulaire normal   ]
-<p><label><:form_pet_votre_email:>
+<p><label><:form_pet_votre_email:><br />
 <input type="text" class="forml" name="email_message_auteur[(#ENV{id})]"
 	value="[(#ENV{mail})]" size="30" />
 </label></p>
