validation XHTML1.0 strict pour le #MENU_LANG

--- a/formulaires/formulaire_menu_lang.html
+++ b/formulaires/formulaire_menu_lang.html
@@ -10,7 +10,7 @@
 		[(#ENV*{langues})]
 	</select>
 	<noscript>
-		<input type='submit' value='&gt;&gt;' class='spip_bouton' />
+		<fieldset><input type='submit' value='&gt;&gt;' class='spip_bouton' /></fieldset>
 	</noscript>
 </div>
 </form>
