pour passer la validation XHTML sur le <noscript> il faut un <div> (<fieldset> c'était vreaiment pas beau)

--- a/formulaires/formulaire_menu_lang.html
+++ b/formulaires/formulaire_menu_lang.html
@@ -10,7 +10,7 @@
 		[(#ENV*{langues})]
 	</select>
 	<noscript>
-		<fieldset><input type='submit' value='&gt;&gt;' class='spip_bouton' /></fieldset>
+		<div style='display:inline;'><input type='submit' value='&gt;&gt;' class='spip_bouton' /></div>
 	</noscript>
 </div>
 </form>
