--- a/formulaires/formulaire_inscription.html
+++ b/formulaires/formulaire_inscription.html
@@ -1,3 +1,4 @@
+<h3 class='spip'><:pass_vousinscrire:></h3>
 [
 (#ENV*{message})
 ][
@@ -7,10 +8,11 @@
 ][
  (#ENV{mode}|=={redac}|?{' ',''})
 	<:pass_espace_prive_bla:><br /><br />
-]<:form_forum_indiquer_nom_email:>
- <form	id="inscription" method='post' action="[(#ENV{self})]"
-	style='border: 0px; margin: 0px;'> 
-      <fieldset style="border: none; font-weight: bold">
+]
+<div class='spip_serif'><:form_forum_indiquer_nom_email:>
+<br /><br />
+ <form	id="inscription" method='post' action="[(#ENV{self})]">
+      <fieldset class='spip_sanscadre'>
 	<legend><:form_forum_identifiants:></legend>
 	<label>
 	  <:form_pet_votre_nom:>
@@ -24,6 +26,7 @@
       <div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" />
 	</div> 
  </form>[
+</div>
 <script type="text/javascript"><!--
 document.inscription.(#ENV{focus}).focus()
 --></script>
