--- a/formulaires/formulaire_inscription.html
+++ b/formulaires/formulaire_inscription.html
@@ -1,39 +1,37 @@
-<h3 class='spip'><:pass_vousinscrire:></h3>
-[
+<h3 class='spip'><:pass_vousinscrire:></h3>[
 (#ENV*{message})
 ][
 (#ENV*{message}|?{'',' '})[
  (#ENV{mode}|=={forum}|?{' ',''})
 	<:pass_forum_bla:><br /><br />
 ][
- (#ENV{mode}|=={redac}|?{' ',''})
-	<:pass_espace_prive_bla:><br /><br />
-]
-<div class='spip_serif'><:form_forum_indiquer_nom_email:>
+ (#ENV{mode}|=={redac}|?{' ',''})<:pass_espace_prive_bla:>
 <br /><br />
- <form	id="inscription" method='post' action="[(#ENV{self})]">
-      <fieldset class='spip_sanscadre'>
-	<legend><:form_forum_identifiants:></legend>
-	<label>
-	  <:form_pet_votre_nom:>
-	  <input type="text" class="forml" name="nom_inscription" value="" size="30" />
-	</label>
-	<label>
-	  <:form_pet_votre_email:>
-	  <input type="text" class="forml" name="mail_inscription" value="" size="30" />
-	</label>
-      </fieldset>
-      <div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" />
+]<div class='spip_serif'><:form_forum_indiquer_nom_email:>
+<br /><br />
+<form	id="inscription" method='post' action="[(#ENV{self})]">
+	<fieldset class='spip_sanscadre'>
+		<legend><:form_forum_identifiants:></legend>
+		<label>
+		  <:form_pet_votre_nom:>
+		  <input type="text" class="forml" name="nom_inscription" value="" size="30" />
+		</label>
+		<label>
+		  <:form_pet_votre_email:>
+		  <input type="text" class="forml" name="mail_inscription" value="" size="30" />
+		</label>
+	</fieldset>
+	<div align="right">
+		<input type="submit" class="spip_bouton" value="<:bouton_valider:>" />
 	</div> 
- </form>[
-</div>
+</form>
+</div>[
 <script type="text/javascript"><!--
 document.inscription.(#ENV{focus}).focus()
---></script>
- ]
+--></script>]
 ][<br />
 <div align="right">
-(#ENV{target}|?{' ',''})
+(#ENV{focus}|?{' ',''})
 <script type="text/javascript"><!--
 document.write("<a href='")
 document.write((window.opener) ? "javascript:close()" : "./")
